# Bethesda

./: README.md
matcher/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.py
matcher/matcher/: __init__.py  model.py  prediction.py  preprocess.py
matcher/notebooks/: 1. Fuzzy String Matching.ipynb  2. Predictive Modeling.ipynb
