[tool.poetry]
name = "matcher"
version = "0.1.0"
description = ""
authors = ["Maarten Grootendorst"]

[tool.poetry.dependencies]
python = "^3.7"
polyfuzz = "^0.3.4"
scikit-learn = "^1.0.1"
pandas = "^1.3.0"
openpyxl = "^3.0.7"
nltk = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
black = "^21.12b0"
flake8 = "^4.0.1"
pyodbc = "^4.0.32"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
